objects/Email_Help_Option__c.object
<CustomObject>
    <fields>
        <fullName>Case_Resolution_Owner__c</fullName>
        <label>Case Resolution Owner</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DAZN</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Resolution_Text__c</fullName>
        <description>Static text that will be displayed back to the customer, if the Case Resolution Owner is External</description>
        <label>Case Resolution Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
                <value>
                    <fullName>JP</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Display_Sequence__c</fullName>
        <label>Display Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>en</fullName>
                </value>
                <value>
                    <fullName>de</fullName>
                </value>
                <value>
                    <fullName>ja</fullName>
                </value>
                <value>
                    <fullName>fr</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Type__c</fullName>
        <description>Can be either DAZN, Docomo or non-member</description>
        <label>Provider Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DAZN</fullName>
                </value>
                <value>
                    <fullName>Docomo</fullName>
                </value>
                <value>
                    <fullName>Non-member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sign_in_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TRUE/FALSE value depending on whether the user needs to sign in for this case type</description>
        <label>Sign in Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <label>Email Help Option</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Language__c</columns>
        <columns>Provider_Type__c</columns>
        <columns>Display_Sequence__c</columns>
        <columns>Case_Resolution_Owner__c</columns>
        <columns>Case_Resolution_Text__c</columns>
        <columns>Sign_in_Needed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>DE</value>
        </filters>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>en</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_ContactUs_Options</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Language__c</columns>
        <columns>Display_Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <label>All ContactUs Options</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DAZN_en</fullName>
        <columns>NAME</columns>
        <columns>Provider_Type__c</columns>
        <columns>Language__c</columns>
        <columns>Type__c</columns>
        <columns>Display_Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Provider_Type__c</field>
            <operation>equals</operation>
            <value>DAZN</value>
        </filters>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>en</value>
        </filters>
        <label>DAZN_en</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>Docomo_Contact_Us_options</fullName>
        <columns>NAME</columns>
        <columns>Provider_Type__c</columns>
        <columns>Language__c</columns>
        <columns>Case_Resolution_Text__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Provider_Type__c</field>
            <operation>equals</operation>
            <value>Docomo</value>
        </filters>
        <filters>
            <field>Case_Resolution_Text__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Docomo Contact Us options</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>Email_Help_Option</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Language__c</columns>
        <filterScope>Everything</filterScope>
        <label>Email Help Option</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <label>Type Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Help Option</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>